src/test/ui/index-help.stderr
error[E0277]: the type `[{integer}]` cannot be indexed by `i32`
  --> $DIR/index-help.rs:3:5
   |
LL |     x[0i32];
   |     ^^^^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `SliceIndex<[{integer}]>` is not implemented for `i32`
   = note: required because of the requirements on the impl of `Index<i32>` for `Vec<{integer}>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
